--- a/_config.yml
+++ b/_config.yml
@@ -101,4 +101,6 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: git@github.com:dahuahe/dahuahe.github.io.git
+  branch: gh-pages
